jsoup changelog

Release 1.16.1 [PENDING]
  * Improvement: Calling Node.remove() on a node with no parent is now a no-op, vs a validation error.
    <https://github.com/jhy/jsoup/issues/1898>

  * Bugfix: Corrected support for ruby elements (<ruby>, <rp>, <rt>, and <rtc>) to current spec.
    <https://github.com/jhy/jsoup/issues/1294>

  * Bugfix: When using Node.before(node) or Node.after(node), if the incoming node was a sibling of the context node,
    the incoming node may be inserted into the wrong relative location.
    <https://github.com/jhy/jsoup/issues/1898>

  * Bugfix: In Jsoup.connect(url), if the input URL had components that were already % escaped, they would be escaped
    again, causing errors when fetched.
    <https://github.com/jhy/jsoup/issues/1902>

  * Bugfix: If the Document.OutputSettings class was initialized, and then Entities.escape(String) called, an NPE may be
    thrown due to a class loading circular dependency.
    <https://github.com/jhy/jsoup/issues/1910>

  * Bugfix: when pretty-printing, the first inline Element or Comment in a block would not be wrap-indented if it were
    preceded by a blank text node.
    <https://github.com/jhy/jsoup/issues/1906>

  * Bugfix: when pretty-printing a <pre> containing block tags, those tags were incorrectly indented.
    <https://github.com/jhy/jsoup/issues/1891>

  * Bugfix: <br> tags should be wrap-indented when in block tags (and not when in inline tags).
    <https://github.com/jhy/jsoup/issues/1911>

Release 1.15.4 [18-Feb-2023]
  * Improvement: added the ability to escape CSS selectors (tags, IDs, classes) to match elements that don't follow
    regular CSS syntax. For example, to match by classname <p class="one.two">, use document.select("p.one\\.two");
    <https://github.com/jhy/jsoup/issues/838>

  * Improvement: when pretty-printing, wrap text that follows a <br> tag.
    <https://github.com/jhy/jsoup/issues/1858>
